<resources>
    <string name="app_name">BMI calculation</string>
    <string name="action_settings">Settings</string>
    <string name="fill">Please, fill in all fields</string>
    <string name="description_bottom_calculate">Button to calculate BMI</string>
    <string name="name_bottom_calculate">Calculate</string>
    <string name="description_text_weight">Enter your weight</string>
    <string name="name_text_weight">Weight</string>
    <string name="description_text_height">Enter your Height</string>
    <string name="name_text_height">Height</string>
    <string name="title_activity_calculate">Result</string>
    <string name="loading">Loading</string>
    <string name="value">Your BMI value is</string>
    <string name="peso_1">Very underweight</string>
    <string name="peso_2">Under weight</string>
    <string name="peso_3">Normal weight</string>
    <string name="peso_4">Overweight</string>
    <string name="peso_5">Obesity I</string>
    <string name="peso_6">Obesity II (severe)</string>
    <string name="peso_7">Obesity III (morbid)</string>
</resources>
